# ps3-firmware-beginners-luck

./: ISSUES  LICENSE  README.md
PS3_355/: license.xml
PS3_355/PS3_355_exploded/: vsh.tar
PS3_355/update_files/: SYS_CON_FIRMWARE_01010303.pkg  SYS_CON_FIRMWARE_01020302.pkg  SYS_CON_FIRMWARE_S1_00010002083E0832.pkg  dev_flash_004.tar.aa.2010_11_27_051337
PS3_411/PS3_411_exploded/: .~lock.ps3swu.self.elf#  license.xml  spkg_hdr.tar
PS3_411/spkg_hdr/: BDIT_FIRMWARE_PACKAGE.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_301R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_302R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_303R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_304R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_306R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_308R.pkg.spkg_hdr.1  BDPT_FIRMWARE_PACKAGE_310R.pkg.spkg_hdr.1  BLUETOOTH_FIRMWARE.pkg.spkg_hdr.1  CORE_OS_PACKAGE.pkg.spkg_hdr.1  MULTI_CARD_FIRMWARE.pkg.spkg_hdr.1  SYS_CON_FIRMWARE_01000006.pkg.spkg_hdr.1  SYS_CON_FIRMWARE_01010303.pkg.spkg_hdr.1  SYS_CON_FIRMWARE_01020302.pkg.spkg_hdr.1  SYS_CON_FIRMWARE_01030302.pkg.spkg_hdr.1  SYS_CON_FIRMWARE_01040402.pkg.spkg_hdr.1  UPL.xml.pkg.spkg_hdr.1  (+28 more)
ps3mfw/: AUTHORS  AppMain.tcl  CREDITS  FIRMWARE  GITREADME  README  SOLUTIONS  Settings.xml  build_cfw_355.sh  console.tcl  ps3mfw  ps3mfw_base.tcl  ps3mfw_gui.tcl  ps3mfw_tasks.tcl  scrolledframe.tcl  tar.tcl  tracedtext.tcl  xml.tcl
ps3mfw/ps3tools/: INSTALL  Makefile  Makefile.am  Makefile.in  README_npdrm  aclocal.m4  autogen.sh  bn.c  config.h  config.h.in  config.status  configure  configure.ac  cospkg  cospkg.c  cosunpack  cosunpack.c  cosunpkg  cosunpkg.c  dat  dat.c  ec.c  eidsplitr  eidsplitr.c  makeself  makeself.c  mingw_mmap.c  norunpack  norunpack.c  pkg  pkg.c  puppack  puppack.c  pupunpack  pupunpack.c  readself  readself.c  readself2  readself2.c  scekrit  (+22 more)
ps3mfw/ps3tools/.deps/: aes.Po  bn.Po  cospkg.Po  cosunpack.Po  cosunpkg.Po  dat.Po  ec.Po  eidsplitr.Po  makeself.Po  mingw_mmap.Po  norunpack.Po  pkg.Po  puppack.Po  pupunpack.Po  readself.Po  readself2.Po  scekrit.Po  sceverify.Po  self.Po  self_rebuilder.Po  sha1.Po  spp.Po  tools.Po  undat.Po  ungpkg.Po  unpkg.Po  unself.Po  unself2.Po  unspp.Po
ps3mfw/ps3tools/autom4te.cache/: output.1  requests  traces.0  traces.1
(+1798 files in other folders)
